Fix misaligned Skymap

--- a/LSST-app/src/components/Charts/Charts.css
+++ b/LSST-app/src/components/Charts/Charts.css
@@ -27,6 +27,7 @@
     padding: 10px 0px;
     margin: 0px 10px;
     border-top: 3px solid #2d3d4e;
+    padding-bottom: 0px;
   }
 
   .bckg{
