--- a/LSST-app/src/components/Survey/Survey.css
+++ b/LSST-app/src/components/Survey/Survey.css
@@ -42,6 +42,7 @@ h4 {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .bottom-left-container {
@@ -52,7 +53,7 @@ h4 {
 
 .bottom-left-container > * {
   background: #3a4d61;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
 }
 
 .left-container {
